--- a/pages/sample-1.html
+++ b/pages/sample-1.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>This is Sample 1</h1>
-<p>This is styled by the css</p>
+<p>This is styled by the sample-1.css</p>
 
 </body>
 </html> 
